# nomad-parser-tutorial-exercise

./: .cruft.json  LICENSE  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml  publish.yml
docs/: index.md
example-files/: example.xml
src/example_plugin_tutorial/parsers/: __init__.py
src/example_plugin_tutorial/schema_packages/: __init__.py
src/example_plugin_tutorial_method_a/schema_packages/: __init__.py  schema_package.py
src/example_plugin_tutorial_method_a/util/: reader.py
src/example_plugin_tutorial_method_b/parsers/: __init__.py  parser.py
src/example_plugin_tutorial_method_b/schema_packages/: __init__.py  schema_package.py
src/example_plugin_tutorial_method_c/parsers/: __init__.py  parser.py
src/example_plugin_tutorial_method_c/schema_packages/: __init__.py
src/nomad_parser_tutorial_exercise/exercise_1/schema_packages/: __init__.py  schema_package.py
src/nomad_parser_tutorial_exercise/exercise_2/parsers/: __init__.py  parser.py
src/nomad_parser_tutorial_exercise/exercise_2/schema_packages/: __init__.py  schema_package.py
src/nomad_parser_tutorial_exercise/exercise_3/parsers/: __init__.py  parser.py
src/nomad_parser_tutorial_exercise/exercise_3/schema_packages/: __init__.py  schema_package.py
src/nomad_parser_tutorial_exercise/schema_tutorial/: __init__.py  schema_package.py  tutorial.ipynb
src/nomad_parser_tutorial_exercise/util/: reader.py  utils.py
src/nomad_plugin_tutorials/parsers/: reader.py  utils.py
src/nomad_plugin_tutorials/parsers/data/om_example/: metadata.xml
src/nomad_plugin_tutorials/parsers/tutorial_1/parsers/: __init__.py  parser.py
src/nomad_plugin_tutorials/parsers/tutorial_1/schema/: __init__.py  schema_package.py
src/nomad_plugin_tutorials/parsers/tutorial_1/schema_packages/: __init__.py
src/nomad_plugin_tutorials/parsers/tutorial_2/parsers/: __init__.py  parser.py
src/nomad_plugin_tutorials/parsers/tutorial_2/schema/: __init__.py  schema_package.py
src/nomad_plugin_tutorials/parsers/tutorial_2/schema_packages/: __init__.py  schema_package.py
src/nomad_plugin_tutorials/parsers/tutorial_3/parsers/: __init__.py  parser.py
src/nomad_plugin_tutorials/parsers/tutorial_3/schema/: __init__.py  schema_package.py
src/nomad_plugin_tutorials/parsers/tutorial_3/schema_packages/: __init__.py  schema_package.py
src/nomad_plugin_tutorials/schema/: __init__.py  calculate.py  schema_package.py  tutorial.ipynb  visualize.py
src/util/: reader.py  utils.py
tests/data/: test.archive.yaml
tests/data/parsers/: 10.1038_s41524-020-00380-w-citation(1).ris  example.xml
tests/data/schema/: test.archive.yaml
tests/data/schema_tutorial/: test.archive.yaml
tests/parsers/: test_parser.py
tests/schema/: test_schema_package.py
